--- a/content/reference/deps_and_cli.adoc
+++ b/content/reference/deps_and_cli.adoc
@@ -1,9 +1,11 @@
 = Deps and CLI
 Alex Miller
-2017-09-25
-:type: guides
+2017-11-30
+:type: reference
 :toc: macro
 :icons: font
+:prevpagehref: lisps
+:prevpagetitle: Differences with Lisps
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
@@ -24,28 +26,14 @@ If you omit the `--devel` you will instead get the latest stable version of Cloj
 
 === Installation on Linux
 
-Package installers - COMING SOON
-
-The following process can be used to manually install the latest devel version of the `clj` script on a *nix system.
+Package installers are not yet available but the following process can be used to manually install the latest devel version of the `clj` script on a *nix system. First ensure that the following dependencies are installed: curl, rlwrap, and Java. Then use the following commands to download and run the installer script, which will create /usr/local/bin/clj, /usr/local/bin/clojure, and /usr/local/lib/clojure:
 
 [source,shell]
 ----
-# Download and extract the tar file in any scratch directory
-mkdir scratch
-cd scratch
-curl -O https://download.clojure.org/install/brew/clojure-scripts.tar.gz
-tar xzf clojure-scripts.tar.gz
-
-# Install the scripts to a directory (that must exist or be created)
-export CLJ_SCRIPTS=$HOME/clojure-scripts
-mkdir -p $CLJ_SCRIPTS
-./install.sh $CLJ_SCRIPTS
-
-# Add scripts to your path
-export PATH=$PATH:$CLJ_SCRIPTS/bin
+curl -O https://download.clojure.org/install/linux-install.sh
+chmod +x linux-install.sh
+sudo ./linux-install.sh
 ----
-
-Note that you will need to remove the scripts above from your path when package installers are available. 
 
 === Installation on Windows
 
@@ -55,38 +43,51 @@ COMING SOON
 
 Usage:
 
-* `clojure [<clj_opts>] [<dep_opts>] [<main_opts>]`
-* `clj [<jvm_opts>] [<dep_opts>] [<main_opts>]`
+* `clojure [dep-opt*] [init-opt*] [main-opt] [arg*]`
+* `clj     [dep-opt*] [init-opt*] [main-opt] [arg*]`
 
-where:
+The clojure script is a runner for Clojure. clj is a wrapper for interactive repl use. These scripts ultimately construct and invoke a command-line of the form:
 
-* `clojure` is the primary script. `clj` is a wrapper for interactive repl use. 
-* `jvm_opts` is 0 or more of the following:
-** `-Jopt` - passes `opt` through to the JVM, ex: `-J-server`
-* `dep_opts` is any of the following (but each at most once):
-** `-Ralias...` - concatenated resolve-args aliases, ex: `-R:bench:1.9`
-** `-Calias...` - concatenated classpath-override aliases, ex: `-C:dev`
-** `-Spath` - compute classpath and show it, without running Clojure
-** `-Srepro` - use only the local deps.edn (ignore install and user deps.edn)
-** `-Sforce` - force recomputation of the classpath (ignore the cache)
-** `-Sverbose` - print important paths while running the clojure script
-* `main_opts` are the `clojure.main` arguments, see [docs](https://clojure.org/reference/repl_and_main)
+`java [java-opt*] -cp classpath clojure.main [init-opt*] [main-opt] [arg*]`
 
-The `clojure` and `clj` scripts ultimately construct and invoke a command-line of the form:
+The dep-opts are used to build the java-opts and classpath:
 
-[source,shell]
 ----
-java <java_opts> -cp <classpath> clojure.main <main_opts>
+-Jopt      Pass opt through in java_opts, ex: -J-Xmx512m
+-Ralias... Concatenated resolve-deps aliases, ex: -R:bench:1.9
+-Calias... Concatenated make-classpath aliases, ex: -C:dev
+-Spath     Compute classpath and echo to stdout only
+-Srepro    Use only the local deps.edn (ignore other config files)
+-Sforce    Force recomputation of the classpath (don't use the cache)
+-Spom      Generate (or update an existing) pom.xml with deps and paths
+-Sverbose  Print important path info to console
 ----
 
-The `dep_opts` are used to compute the `<classpath>` in this final invocation. Classpaths are cached (except when using `-P`) - see the section on classpath caching below for more details. When a classpath is not available, the following process is used to construct the classpath:
+init-opt:
+
+----
+-i, --init path     Load a file or resource
+-e, --eval string   Eval exprs in string; print non-nil values
+----
+
+main-opt:
+
+----
+-m, --main ns-name  Call the -main function from namespace w/args
+-r, --repl          Run a repl
+path                Run a script from a file or resource
+-                   Run a script from standard input
+-h, -?, --help      Print this help message and exit
+----
+ 
+When a classpath is not available, the following process is used to construct the classpath:
 
 * Compute the deps map
 ** Read the deps.edn file in the following locations:
 *** Install directory (unless -Srepro)
 *** Config directory (if it exists and unless -Srepro)
 *** Current directory (if it exists)
-** Combine the deps.edn maps in that order with `merge-with merge`
+** Combine the deps.edn maps in that order with `merge-with merge` (except for :paths where last wins)
 * Compute the resolve-deps args
 ** If `-R` specifies one or more aliases, find each alias in the deps map `:aliases`
 ** `merge-with` `merge` the alias maps - the result is the resolve-args map
@@ -100,30 +101,7 @@ The `dep_opts` are used to compute the `<classpath>` in this final invocation. C
 
 == deps.edn
 
-The deps.edn file is an instance of the `::deps-map` https://github.com/clojure/tools.deps.alpha/blob/master/src/main/clojure/clojure/tools/deps/alpha/specs.clj[spec]. The full spec is defined below:
-
-[cols="3<*", options="header", role="table"]
-|===
-| Spec name | Definition | Description |
-| `::deps-map` | `(s/keys :opt-un [::paths ::deps ::aliases])` | The deps.edn format |
-| `::paths` | `(s/coll-of string? :kind vector? :into [])` | Paths in current project to include in classpath |
-| `::deps` | `(s/map-of ::lib ::coord)` | Dependencies, a map from lib to (optional) coord |
-| `::lib` | `symbol?` | A library like `org.clojure/core` or `criterium` |
-| `::coord` | `(s/or :mvn :mvn/coord :local :local/coord)` | The coordinate of different types. |
-| `::aliases` | `(s/map-of ::alias (s/or :resolve-deps ::resolve-args :make-classpath ::classpath-args))` | Aliases for use at the command line |
-| `::alias` | `keyword?` | The command line alias to use with `clj -R` or `clj -C` |
-| `::resolve-args` | `(s/keys :opt-un [::extra-deps ::override-deps ::default-deps])` | Dep modifications to pass to `resolve-deps` |
-| `::extra-deps` | `(s/map-of ::lib ::coord)` | Dependencies to add to the initial set |
-| `::override-deps` | `(s/map-of ::lib ::coord)` | If dep is found when expanding deps, use this coordinate, regardless of what is specified |
-| `::default-deps` | `(s/map-of ::lib ::coord)` | If dep is found when expanding deps and no coordinate is provided, use this coordinate |
-| `::classpath-args` | `(s/keys :opt-un [::classpath-overrides ::extra-paths])` | Classpath modifications to pass to `make-classpath` |
-| `::classpath-overrides` | `(s/map-of ::lib ::path)` | Override paths to use for libraries, passed to `make-classpath` |
-| `::extra-paths` | `(s/coll-of string? :kind vector? :into [])` | Collection of extra paths to add to the classpath in addition to ::paths |
-| `::mvn/repos` | `(s/map-of ::repo-id ::repo)` | Maven provider repo config |
-| `::repo-id` | `string?` | Repository name |
-| `::repo` | `(s/keys :opt-un [::url])` | A Maven repository configuration |
-| `::url` | `string?` | A Maven repository url |
-|===
+The deps.edn file is an instance of the `::deps-map` https://github.com/clojure/tools.deps.alpha/blob/master/src/main/clojure/clojure/tools/deps/alpha/specs.clj[spec]. 
 
 Example:
 
@@ -146,7 +124,7 @@ Example:
    :bench {:extra-deps {criterium {:mvn/version "0.4.4"}}}
 
    ;; An alias to override the default Clojure version: -R:1.9
-   :1.9 {:override-deps {org.clojure/clojure {:mvn/version "1.9.0-alpha20"}}}
+   :1.9 {:override-deps {org.clojure/clojure {:mvn/version "1.9.0-beta2"}}}
 
    ;; A classpath override alias to use a local build of Clojure: -C:dev
    :dev {:classpath-overrides {org.clojure/clojure "/Users/me/clojure/target/classes"}}
@@ -167,7 +145,7 @@ Example:
 
 The `clojure` and `clj` scripts rely on several directories and optionally on several environment variables. In general, as a new user of `clj`, you can ignore this section as everything is taken care of by default.
 
-* scripts directory
+* installation directory
 ** Created during installation
 ** Contents:
 *** `bin/clojure` - main script
@@ -203,5 +181,150 @@ where the `<hash>` is based on the config file paths, the resolve-aliases, and t
 The cached classpath file is used when:
 
 * It exists
-* It is newer than `deps.edn`
-* It is newer than all of the existing config files
+* It is newer than all `deps.edn` files
+
+== Examples
+
+=== Running a REPL from anywhere
+
+* Invoke: `clj`
+* Given: No deps.edn file in the current directory.
+* Result: Start a repl using the default deps file at <install>/deps.edn.
+
+=== Running a REPL using deps.edn in the current directory
+
+* Invoke: `clj`
+* Given: A deps.edn file in the current directory.
+* Result: Start a repl using the deps.edn file at ./deps.edn.
+
+=== Including a test source directory into a classpath
+
+* Invoke: `clj -C:test`
+* Given: A deps.edn file like the one below.
+* Result: Start a repl including external deps and a test source directory root.
+
+[source,clojure]
+----
+;; deps.edn
+{:deps {org.clojure/clojure {:mvn/version "1.9.0-beta2"}}
+ :aliases {
+   :test {:extra-paths ["test"]}
+ }
+}
+----
+
+=== Refer to a specific jar on disk
+
+* Invoke `clj`
+* Given: A deps.edn file like the one below.
+* Result: Includes a specific jar file in your classpath
+
+[source,clojure]
+----
+;; deps.edn
+{:deps {org.clojure/clojure {:mvn/version "1.9.0-beta2"}
+        oracle/driver {:local/root "/path/to/oracle/driver.jar"}}}
+----
+
+=== Refer to another project on disk that has a deps.edn file
+
+* Invoke `clj`
+* Given: A deps.edn file like the one below
+* Result: Includes another project defined on disk, using /path/to/project/deps.edn will be used as the source of paths and deps for the dependency project. Support for other project types (pom.xml, project.clj) will be possible, but is not yet implemented.
+
+[source,clojure]
+----
+;; deps.edn
+{:deps {org.clojure/clojure {:mvn/version "1.9.0-beta2"}
+        my.company/sibling-project {:local/root "/path/to/project"}}}
+----
+
+=== Running a Clojure namespace in the current directory
+
+* Invoke: `clojure -m my.app 1 2 3`
+* Result: Load the my.app namespace and invoke my.app/-main with the arguments `1 2 3`. If a deps.edn file exists, use it, otherwise use the default deps file.
+
+=== Add an optional dependency to your classpath
+
+* Invoke: `clj -R:bench`
+* Given: A deps.edn file like the one below.
+* Result: Start a repl using the deps and add the extra deps defined by the `:bench` alias.
+
+[source,clojure]
+----
+;; deps.edn
+{:deps {org.clojure/clojure {:mvn/version "1.8.0"}}
+ :aliases {:bench {:extra-deps {criterium {:mvn/version "0.4.4"}}}}}
+----
+
+=== Add an optional dependency and override a dependency
+
+* Invoke: `clj -R:bench:1.9`
+* Given: A deps.edn file like the one below.
+* Result: Start a repl using the deps and add the extra deps defined by the `:bench` alias and the override deps defined by the `:1.9` alias.
+
+[source,clojure]
+----
+;; deps.edn
+{:deps {org.clojure/clojure {:mvn/version "1.8.0"}}
+ :aliases {:1.9 {:override-deps {org.clojure/clojure {:mvn/version "1.9.0-beta2"}}}
+           :bench {:extra-deps {criterium {:mvn/version "0.4.4"}}}}}
+----
+
+=== Override a classpath source
+
+* Invoke: `clj -R1.9 -Cdev`
+* Given: A deps.edn file like the one below.
+* Result: Start a repl using the deps, the override deps defined by the `:1.9` alias, and the classpath override for the dev path.
+
+[source,clojure]
+----
+;; deps.edn
+{:deps {org.clojure/clojure {:mvn/version "1.8.0"}}
+ :aliases {:1.9 {:override-deps {org.clojure/clojure {:mvn/version "1.9.0-beta2"}}}
+           :dev {:classpath-overrides {org.clojure/clojure "/Users/me/code/clojure/target/classes"}}}}
+----
+
+=== Show classpath
+
+* Invoke `clj -Spath`
+* Given: A deps.edn like the one below.
+* Result: Computes the classpath and prints it to stdout
+
+[source,clojure]
+----
+;; deps.edn
+{:deps {:org.clojure/clojure {:mvn/version "1.8.0"}}}
+----
+
+Note that `-S` can be combined with other `clj` options as well.
+
+== Connecting to S3 Maven repositories
+
+The clj script includes support for connecting to private S3 Maven repositories (thanks to the https://github.com/s3-wagon-private/s3-wagon-private[s3-wagon-private] and https://github.com/spring-projects/aws-maven[aws-wagon] projects).
+
+=== S3 repository
+
+In your deps.edn file, include the s3 repository root:
+
+[source,clojure]
+----
+{:deps {
+   my.library {:mvn/version "0.1.2"}
+ }
+ :mvn/repos {
+   "my-private-repo" {:url "s3://my-bucket/maven/releases"}
+ }
+}
+----
+
+=== S3 credentials
+
+There are several ways to specify your AWS S3 credentials:
+
+1. Set the environment variables `AWS_ACCESS_KEY_ID` and `AWS_SECRET_ACCESS_KEY`.
+2. Create a default profile in the AWS credentials file `~/.aws/credentials` (older `~/.aws/config` also supported).
+3. Create a named profile in the AWS credentials file and set the environment variable `AWS_PROFILE` with its name.
+4. Amazon ECS container and instance profile credentials should also work, but have not been tested.
+
+For more information, most of the advice in http://docs.aws.amazon.com/sdk-for-java/v1/developer-guide/credentials.html[this AWS document] describes how credentials are located. Note however that the Java system properties options will NOT work with the clojure scripts (but would work if using the tools.deps.alpha library directly).
