--- a/content/reference/lisps.adoc
+++ b/content/reference/lisps.adoc
@@ -7,6 +7,8 @@ Rich Hickey
 :navlinktext: Differences with Lisps
 :prevpagehref: other_libraries
 :prevpagetitle: Other Libraries
+:nextpagehref: deps_and_cli
+:nextpagetitle: Deps and CLI
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
